--- a/Página inicial/index.css
+++ b/Página inicial/index.css
@@ -21,39 +21,41 @@ body {
 }
 
 #popup{
-  display: none;
-  width: 1000px;
+  width: 1067px;
   height: 600px;
-  background-color: #000000;
+  background: url(../images/Your\ paragraph\ text.png) ;
   color: rgb(255, 250, 250);
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-  border: 1px solid rgb(255, 0, 0);
-  border-radius: 15px;
+  border-radius: 10px;
   text-align: center;
+  z-index: 999;
 }
 #popup img{
-  width: 800px;
-  height: 400px;
+  width: 500px;
+  height: 300px;
 }
 
 #closebtn{
+    position: relative;
+    margin-top: 550px;
+    margin-left: 930px;
     width: 80px;
     height: 30px;
-    border: 3px solid rgb(255, 60, 0);
-    border-radius: 15px;
+    border-radius: 10px;
     transition: all 0.3s;
     cursor: pointer;
-    background: rgb(218, 218, 218);
+    background: rgb(0, 0, 0);
     font-size: 13px;
     font-weight: 500;
+    color: white;
 }
 
 #closebtn:hover {
-  background: #000000;
-  color: white;
+  background: white;
+  color: rgb(0, 0, 0);
   font-size: 15px;
 }
 h2{
@@ -61,6 +63,8 @@ h2{
     color: rgb(255, 255, 255);
     font-size: 40px;  
 }
+
+
 h3{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 40px;
@@ -81,8 +85,7 @@ header {
 .btn {
     width: 100px;
     height: 40px;
-    border: 3px solid rgb(255, 60, 0);
-    border-radius: 15px;
+    border-radius: 10px;
     transition: all 0.3s;
     cursor: pointer;
     background: rgb(218, 218, 218);
@@ -187,7 +190,6 @@ nav ul li a {
 }
 
 .carousel {
-  position: relative;
   width: 100%;
   max-width: 600px;
   margin: auto;
@@ -208,7 +210,7 @@ nav ul li a {
 
 .carousel img {
   width: 100%;
-  display: block;
+  display: flex;
 }
 
 .carousel p{
@@ -233,7 +235,6 @@ nav ul li a {
     display: block;
     text-align:left;
 }
-
 .logu {
     width: 150px;
     height: 150px;
