--- a/Aulas/aulas.css
+++ b/Aulas/aulas.css
@@ -13,7 +13,15 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
+h2{
+    color: #fff;
+}
+p{
+    color: #fff;
+}
+h3{
+    color: #fff;
+}
 .container {
     width: 90%;
     margin: 0 auto;
@@ -26,7 +34,21 @@ header {
     width: 150px;
     height: 150px;
 }
-
+.btn {
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    transition: all 0.3s;
+    cursor: pointer;
+    background: rgb(218, 218, 218);
+    font-size: 1.2em;
+    font-weight: 500;
+  }
+.btn:hover {
+    background: #000000;
+    color: white;
+    font-size: 1.5em;
+}
 nav ul {
     list-style: none;
     padding: 0;
@@ -50,11 +72,9 @@ nav ul li a:hover {
 .filters {
     width: 100%;
     padding: 20px;
-    background: #f4f4f4;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin-top: 20px;
-    border-bottom: 1px solid #ddd;
 }
 
 .filters h2 {
@@ -85,7 +105,8 @@ nav ul li a:hover {
     padding: 0 16px;
     width: 100%;
     max-width: 500px;
-    background: #989898;
+    margin-bottom: 20px;
+    background: #393939;
     border: 1px solid #ddd;
     border-radius: 5px;
     text-align: center;
@@ -108,7 +129,7 @@ nav ul li a:hover {
 }
 
 .product-item p {
-    color: #666;
+    color: #ffffff;
 }
 
 .product-item .price {
@@ -119,7 +140,7 @@ nav ul li a:hover {
 
 .product-item:hover {
     transform: scale(1.1);
-    border: 2px solid rgb(255, 60, 0);
+    border: 2px solid rgb(255, 255, 255);
 }
 
 footer {
@@ -148,4 +169,21 @@ footer {
 
 .container p a:hover {
     text-decoration: underline;
+}
+footer {
+    background-image:url(../images/backgroundspartans.png);
+    color: white;
+    text-align: center;
+    width: auto;
+    height: 300px;
+}
+.b {
+    display: inline;
+    text-align:center;
+}
+.a { 
+    width: 150px;
+    height: 100px;
+    display: block;
+    text-align: left;
 }
