--- a/Página inicial/index.css
+++ b/Página inicial/index.css
@@ -16,7 +16,7 @@ body {
   font-family: DM Sans, sans-serif;
   font-weight: 900;
   font-size: 30px;
-  color: #ffad12;
+  color: red;
   text-align: center;
 }
 
