--- a/Login/login.css
+++ b/Login/login.css
@@ -1,72 +1,173 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: black;
-    background: url('https://raw.githubusercontent.com/DanielSilva1472/Spartans/main/images/backgroundspartans.png');
+header {
+    background-color: #000000;
+    text-align: fixed;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 100vh;
+    width: auto;
+    height: 150px;
+}
+
+body {
+  margin-left: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: -15px;
+    font-family: Verdana, sans-serif;
+    background-color: #f5f5fa;
+    width: auto;
+    height: auto;
+    color: #000000;
+}
+
+.logu {
+    width: 150px;
+    height: 150px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #ffffff;
+    position: relative;
+    margin: auto;
+    margin-top: 5%;
+    padding: 30px;
+    width: 450px;
+    border-radius: 20px;
+    font-family: Verdana, sans-serif;
+  }
+  
+  ::placeholder {
+    font-family: Verdana, sans-serif;
+  }
+  
+  .form button {
+    align-self: flex-end;
+  }
+  
+  .flex-column > label {
+    color: #151717;
+    font-weight: 600;
+  }
+  
+  .inputForm {
+    border: 1px solid #ecedec;
+    border-radius: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    transition: 0.2s ease-in-out;
+  }
+  
+  .input {
+    margin-left: 10px;
+    border-radius: 10px;
+    border: none;
+    width: 85%;
+    height: 90%;
+  }
+  
+  .input:focus {
+    outline: none;
+  }
+  
+  .inputForm:focus-within {
+    border: 1.5px solid #2d79f3;
+  }
+  
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+  }
+  
+  .flex-row > div > label {
+    font-size: 14px;
+    color: black;
+    font-weight: 400;
+  }
+  
+  .span {
+    font-size: 14px;
+    margin-left: 5px;
+    color: #2d79f3;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  
+  .button-submit {
+    margin: 20px 0 10px 0;
+    background-color: #151717;
+    border: none;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    height: 50px;
+    width: 100%;
+    cursor: pointer;
+  }
+  
+  .button-submit:hover {
+    background-color: #252727;
+  }
+  
+  .p {
+    text-align: center;
+    color: black;
+    font-size: 14px;
+    margin: 5px 0;
+  }
+  
+  .btn {
+    padding: 17px 40px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: white;
+    box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 15px;
+    transition: all 0.5s ease;
+  }
+  
+  .btn:hover {
+    letter-spacing: 3px;
+    background-color: #DC2626;
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(220, 24, 34) 0px 7px 29px 0px;
+  }
+  
+  .btn:active {
+    letter-spacing: 3px;
+    background-color: #DC2626;
+    color: hsl(0, 0%, 100%);
+    box-shadow: #DC2626 0px 0px 0px 0px;
+    transform: translateY(10px);
+    transition: 100ms;
+  }
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
     margin: 0;
 }
 
-header {
-    background-color: #ffffff;
-    color: black;
-    padding: 1rem;
+nav ul li {
+    display: inline;
+    margin: 0 1rem;
 }
 
-.container {
-    display: flex;
-    width: 80%;
-    max-width: 900px;
-    justify-content: center;
-}
-
-.form-container {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 45%;
-    text-align: center;
-}
-
-.form-container h2 {
-    margin-bottom: 20px;
-}
-
-.form-container input[type="text"],
-.form-container input[type="password"],
-.form-container input[type="email"] {
-    width: calc(100% - 20px);
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.form-container input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #4d4d4d;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.form-container input[type="submit"]:hover {
-    background-color: #2c2c2c;
-}
-
-.form-container a {
-    display: block;
-    margin-top: 10px;
-    color: #4d4d4d;
+nav ul li a {
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
-.form-container a:hover {
-    text-decoration: underline;
-}
+  
+      
